# BrightMCBackup

./: .gitignore  CMakeLists.txt  README.md  agent_build_verification.bat  install_and_build.bat  install_dependencies.bat  tsconfig.json
.github/workflows/: ci.yml  quality.yml  release.yml
i18n/: minecraftbackup_en.ts  minecraftbackup_vi.ts
resources/: resources.qrc
src/: application.cpp  application.h  main.cpp
src/agent/: agentmode.cpp  agentmode.h
src/cloud/: googledrive.cpp  googledrive.h  onedrive.cpp  onedrive.h
src/core/: backupengine.cpp  backupengine.h  configscanner.cpp  configscanner.h  launcherdetector.cpp  launcherdetector.h  restoreengine.cpp  restoreengine.h
src/gui/: backupschedule.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.ui  thememanager.cpp  thememanager.h
src/i18n/: translationmanager.cpp  translationmanager.h
src/utils/: compression.cpp  compression.h  filemanager.cpp  filemanager.h
